[package]
name = "mvnr"
version = "0.1.0"
authors = ["CatCoderr <catcoderr@gmail.com>"]
description = "A simple high performance Maven 2 repository server written in Rust"
edition = "2018"

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
warp = "0.3.6"
base64 = "0.21.5"
regex = "1"
once_cell = "1.3.1"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
log = "0.4"
pretty_env_logger = "0.5.0"
clap = { version = "4.4.8", features = ["derive"] }

[profile.release]
codegen-units = 1
incremental = false
